--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -93,7 +93,7 @@ body {
 .L  {list-style:none;padding-left:0}
 .v  {display:block}
 .w  {flex-wrap:wrap}
-.x  {width: 100%;margin:0 auto;box-sizing:border-box;padding-left:50px;padding-right:50px;max-width:1200px;&.mw16{max-width:1700px}}
+.x  {width: 100%;margin:0 auto;box-sizing:border-box;padding-left:50px;padding-right:50px;max-width:900px}
 .y  {display:flex}
 .bl {display:block}
 .z  {justify-content:space-between}
