--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -147,6 +147,10 @@ body {
   margin-top: 9px;
 
 }
+
+.markdown h1 {
+  font-size: 40px;
+}
 .br-gr:before {
   height: 46px;
   border-radius: 46px;
