--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -46,7 +46,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: 'ColfaxWebRegular', "Proxima Nova", -apple-system, "BlinkMacSystemFont";
+  font-family: 'Garamond', 'Times New Roman', serif;
   font-size: 17px;
   font-weight: 400;
   line-height: 1.618;
