--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -11988,7 +11988,7 @@ textarea {
   background-color: rgba(255,255,255,0.1);
 
   svg { margin-left: 7px }
-  path { stroke: #111; fill: none }
+  path { stroke: #111; fill: #111 }
   &.w path { stroke: white }
 
   &.abs {position: absolute}
