--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -12177,3 +12177,8 @@ button {
   transform: scale(1.01);
   transition: 0.24s ease-in all;
 }
+
+.bio{display:flex;justify-content:space-between;
+  >*{width:calc(50%-20px)}
+  .paragr {display: block}
+}
