--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -12187,4 +12187,5 @@ button {
 @media (max-width: 767.98px) {
   .bio{flex-direction:column;>*{width:100%}}
   .page{padding-top:5em}
+  .paragr h2{font-size:1.375rem}
 }
