--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -75,6 +75,13 @@
   }
 }
 
+@font-face {
+	font-family: 'EBGaramond';
+	src: url('../EBGaramond-Medium.ttf');
+	font-weight: normal;
+	font-style: normal;
+}
+
 body {
   margin: 0;
   font-family: var(--bs-body-font-family);
@@ -103,7 +110,7 @@ hr:not([size]) {
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "EBGaramond", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   line-height: 1.2;
 }
